--- a/backend/pratise backend/practice project pin/pin/views/shop.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shop.ejs
@@ -22,70 +22,53 @@
 
         <!-- product pages -->
         <div class="page2 chaids">
-            <div class="card1 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff380ebfee344ff98d24d4156ded6b9dc22a2a2a-5000x5000.png/Change-The-Course-Cookbook-Two-Good-Co.png?w=1024&h=1024&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOKBOOK</h5>
-                <h5>$45</h5>
+                <% if (productList.length > 0) { %>
+                    <% productList.slice(0,2).forEach(function(product) { %>
+                      <div class="card1 chaid">
+                        <a href="/product/<%= product._id %>">
+                          <img src="<%= product.pImage %>" alt="">
+                        </a>
+                        <h5><%= product.producttitle %></h5>
+                        <h6>$<%= product.pPrice %></h6>
+                      </div>
+                    <% }) %>
+                  <% } else { %>
+                    <h3>Not found</h3>
+                  <% } %>
+    
 
-            </div>
-            <div class="card2 chaid">
-                <a href="/product"><img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
-                    alt=""></a>
-                <h5>CHANGE THE COURSE COOK KIT</h5>
-                <h5>$95</h5>
-
-            </div>
 
         </div>
         <div class="page3 chaids" >
-            <div class="card1 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/4206e9c3f7ab098369c39a2194b82eeca6bb0664-6166x4111.png/DSC0005_Dexter%20Kim.png?rect=2,0,6162,4111&w=640&h=427&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOKBOOK</h5>
-                <h5>$45</h5>
-
-            </div>
-            <div class="card2 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d9f276f5548fdf47c94a403ffaad6384ee1dd81c-5000x5000.png/Helping-Hands-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOK KIT</h5>
-                <h5>$95</h5>
-
-            </div>
-            <div class="card3 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5ff174456e7f3a000b5bcdd6768155d29570c39b-5000x5000.png/Good-Nights-Sleep-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOK KIT</h5>
-                <h5>$95</h5>
-
-            </div>
-
+            <% if (productList.length > 0) { %>
+                <% productList.slice(2,5).forEach(function(product) { %>
+                  <div class="card1 chaid">
+                    <a href="/product/<%= product._id %>">
+                      <img src="<%= product.pImage %>" alt="">
+                    </a>
+                    <h5><%= product.producttitle %></h5>
+                    <h6>$<%= product.pPrice %></h6>
+                  </div>
+                <% }) %>
+              <% } else { %>
+                <h3>Not found</h3>
+              <% } %>
         </div>
 
         <div class="page4 chaids">
-            <div class="card1 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5708a06a5c62e6ecd938d42647888efd72bc5907-1408x1407.png/Donate-100-meals-to-womens-shelter-two-good-co.png?rect=1,0,1407,1407&w=640&h=640&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOKBOOK</h5>
-                <h5>$45</h5>
-
-            </div>
-            <div class="card2 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/9abbc4a8506716e15d8b5c9fd2845222060e8c77-2523x2354.png/Eggplant-Kasundi-Two-Good-Co.png?rect=0,1,2523,2353&w=640&h=597&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOK KIT</h5>
-                <h5>$95</h5>
-
-            </div>
-            <div class="card3 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=640&h=640&auto=format"
-                    alt="">
-                <h5>CHANGE THE COURSE COOK KIT</h5>
-                <h5>$95</h5>
-
-            </div>
-
+            <% if (productList.length > 0) { %>
+                <% productList.slice(5,9).forEach(function(product) { %>
+                  <div class="card1 chaid">
+                    <a href="/product/<%= product._id %>">
+                      <img src="<%= product.pImage %>" alt="">
+                    </a>
+                    <h5><%= product.producttitle %></h5>
+                    <h6>$<%= product.pPrice %></h6>
+                  </div>
+                <% }) %>
+              <% } else { %>
+                <h3>Not found</h3>
+              <% } %>
         </div>
 
         <!-- footer page -->
@@ -166,3 +149,73 @@
     <script src="/javascripts/shop.js"></script>
 
     <% include ./partial/footer.ejs %>
+
+
+
+
+
+
+    
+<!-- 
+            <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff380ebfee344ff98d24d4156ded6b9dc22a2a2a-5000x5000.png/Change-The-Course-Cookbook-Two-Good-Co.png?w=1024&h=1024&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <a href="/product"><img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
+                    alt=""></a>
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div> -->
+
+
+
+
+            <!-- <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5708a06a5c62e6ecd938d42647888efd72bc5907-1408x1407.png/Donate-100-meals-to-womens-shelter-two-good-co.png?rect=1,0,1407,1407&w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/9abbc4a8506716e15d8b5c9fd2845222060e8c77-2523x2354.png/Eggplant-Kasundi-Two-Good-Co.png?rect=0,1,2523,2353&w=640&h=597&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+            <div class="card3 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7a2007de38624a0b2935416bf51a4584889aa232-5000x5000.png/Website%20Products%20(12).png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>  -->
+
+
+            <!-- <div class="card1 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/4206e9c3f7ab098369c39a2194b82eeca6bb0664-6166x4111.png/DSC0005_Dexter%20Kim.png?rect=2,0,6162,4111&w=640&h=427&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOKBOOK</h5>
+                <h5>$45</h5>
+
+            </div>
+            <div class="card2 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d9f276f5548fdf47c94a403ffaad6384ee1dd81c-5000x5000.png/Helping-Hands-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div>
+            <div class="card3 chaid">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/5ff174456e7f3a000b5bcdd6768155d29570c39b-5000x5000.png/Good-Nights-Sleep-Pack-Expanded-Two-Good-Co.png?w=640&h=640&auto=format"
+                    alt="">
+                <h5>CHANGE THE COURSE COOK KIT</h5>
+                <h5>$95</h5>
+
+            </div> -->
